services/k8s/miniflux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux-deployment
spec:
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          value: postgres://postgres:2P3o5s8t@127.0.0.1:5432/miniflux?sslmode=disable
        - name: RUN_MIGRATIONS
          value: "1"
        image: miniflux/miniflux:latest
        name: miniflux
        ports:
        - containerPort: 8080
      - command:
        - /cloud_sql_proxy
        - -dir=/cloudsql
        - -instances=j15rpersonal:us-central1:j15r-db-new=tcp:5432
        - -credential_file=/secrets/cloudsql/credentials.json
        image: gcr.io/cloudsql-docker/gce-proxy:1.33.14
        name: cloudsql-proxy
        volumeMounts:
        - mountPath: /secrets/cloudsql
          name: cloudsql-instance-credentials
          readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
