services/k8s/miniflux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: miniflux
  type: ClusterIP
