services/k8s/miniflux/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    networking.gke.io/frontend-config: miniflux-default-frontend-config
    networking.gke.io/managed-certificates: miniflux-cert
  name: miniflux-ingress
spec:
  rules:
  - host: flux.j15r.com
    http:
      paths:
      - backend:
          service:
            name: miniflux-service
            port:
              number: 80
        path: /
        pathType: Prefix
